testsuite/tests/contrib/lkt_semantic/invalid_import/test.out
Resolving test.lkt
==================
test.lkt:1:1: error: cannot find invalid_import
0 | import invalid_import
  | ^^^^^^^^^^^^^^^^^^^^^

